<resources>
    <string name="app_name">As3Try</string>
    <string name="action_settings">Settings</string>
    <string name="string_author_zelin_han_erwin_bai" translatable="false" />
    <string name="brain_seeker">Brain Seeker</string>
    <string name="author_zelin_han_erwin_bai"><![CDATA[Author: Zelin Han & Erwin Bai]]></string>
    <string name="backgroud">Back_Ground</string>
    <string name="zombie">Zombie</string>
    <string name="pea">Pea</string>
    <string name="start">Start</string>
    <string name="button">Button</string>
    <string name="option">Option</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="help">Help</string>
    <string name="link">https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home</string>
    <string name="find_brains">Find Brains</string>
    <string name="title_activity_manuel">Manuel</string>
    <string name="title_activity_games">Games</string>
    <string name="title_activity_helps">Helps</string>
    <string name="title_activity_options">Options</string>
    <string name="finish">Finish</string>
    <string name="you_find_all_brains">You find all brains!</string>
    <string name="save">Save</string>
    <string name="title_activity_alert">alert</string>
</resources>
