<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manuel">


    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="530dp"
        android:text="@string/start"
        android:textSize="30sp"
        android:textColor="#E0D710"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="530dp"
        android:text="@string/option"
        android:textSize="30sp"
        android:textColor="#E0D710"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="530dp"
        android:text="@string/help"
        android:textSize="30sp"
        android:textColor="#E0D710"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="336dp"
        android:layout_height="310dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="51dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/zombie_head" />
</androidx.constraintlayout.widget.ConstraintLayout>